syntax = "proto3";

package manager;

service ManagerService {
  rpc  Signup(ManagerSignupRequest) returns (ManagerResponse);
  
  
 
}

message ManagerSignupRequest {
 string name = 1;
  string email = 2;
  string phone = 3;
  string password = 4;
  string restaurantId = 5;
  string accountNumber = 6;
  string ifscCode = 7;
  string bankName = 8;
}





message ManagerResponse {
  string message = 1;
  ManagerData data = 2;
}

message ManagerData {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string restaurant_id = 5;
  string accountnumber = 6;
  string ifscCode = 7;
  string bankname = 8;
}



